--- a/app/stylesheets/style.scss
+++ b/app/stylesheets/style.scss
@@ -6,6 +6,7 @@ a.remove { background:url(https://s3.amazonaws.com/s.lineofthought.com/images/ic
 img.screenshot, .screenshot img { border: 1px solid #ccc; float:left; }
 a.external { font-size:10px; }
 a:link, a:visited { color:#3792B3; font-weight:bold; outline-color:-moz-use-text-color; outline-style:none; outline-width:medium; text-decoration:none; }
+p.center { text-align:center; }
 
 section.text { }
 section.text p, section.text h3 { margin:.5em 1em; }
