--- a/app/views/tour/_sidebar.html.erb
+++ b/app/views/tour/_sidebar.html.erb
@@ -2,7 +2,7 @@
   <aside>
     <h3>Line Of Thought Tour</h3>
     <ul class="lst">
-      <li><%= link_to "Take a Tour", tour_path %></li>
+      <li><%= link_to "Line Of Thought Tour", tour_path %></li>
       <li><%= link_to "About Sites", sites_tour_path %></li>
       <li><%= link_to "About Tools", tools_tour_path %></li>
       <li><%= link_to "About Permissions", permissions_tour_path %></li>
