--- a/app/views/tour/index.html.erb
+++ b/app/views/tour/index.html.erb
@@ -1,7 +1,7 @@
-<% title "Take a Tour" %>
+<% title "Line Of Thought Tour" %>
 <section id="content" class="main">
   <article>
-    <h2>Take a Tour</h2>
+    <h2><%= @title %></h2>
     <p>Line Of Thought is an open way for people to list out what technologies they use.</p>
     <p>There's a few main goals of this site including:
     <ul>
