--- a/app/views/tour/permissions.html.erb
+++ b/app/views/tour/permissions.html.erb
@@ -1,4 +1,4 @@
-<% title "Take a Tour - Permissions" %>
+<% title "Line Of Thought Tour - Permissions" %>
 <section id="content" class="main">
   <article>
     <h2><%= @title %></h2>
