--- a/app/views/tour/sites.html.erb
+++ b/app/views/tour/sites.html.erb
@@ -1,4 +1,4 @@
-<% title "Take a Tour - Site Developers" %>
+<% title "Line Of Thought Tour - Site Developers" %>
 <section id="content" class="main">
   <article>
     <h2><%= @title %></h2>
