--- a/app/views/usings/_recent.html.erb
+++ b/app/views/usings/_recent.html.erb
@@ -8,5 +8,6 @@
       </li>
     <% end %>
   </ul>
+  <p class="center"><%= link_to "see more as it happens", stream_path %></p>
 </aside>
 <% end %>
