--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,17 +1,27 @@
-<div id='boxtop'></div>
-<div id='banner'>
-  <h1>Line Of Thought will be launching soon!</h1>
-</div>
-<div id='boxmain'>
-  <p>Enter your email address below and we'll notify you when we've launched.</p>
-  <div id='subscribe'>
-    <%= form_tag subscriptions_path do %>
-      <input type='hidden' name='subscription[referrer]' value='<%= request.referrer %>' />
-      <label for='email'>Email</label>
-      <input type='text' name='subscription[email]' value='' />
-      <div class='button-container'>
-        <button value='submit' class='awesome'>Notify Me!</button>
-      </div>
+<section id="content" class="main">
+  <section class="announcement">
+    <p class="title">Discover what tools power the sites you visit</p>
+    <p>The easiest way to share information about any site.</p>
+  </section>
+
+  <ul id="sites-list" class="sites main-list">
+    <%= render @sites %>
+  </ul>
+
+  <section class="announcement">
+    <p>Check out all <%= link_to "#{Site.count} sites", sites_path %> or <%= link_to "#{Tool.count} tools", tools_path %>.</p>
+  </section>
+</section>
+
+<sidebar>
+  <aside>
+    <h3>Welcome to Line Of Thought!</h3>
+    <p>We provide an easy way for developers to <em>share information</em> about what powers their websites.</p>
+    <p>If you'd like to know more about Line Of Thought, <%= link_to "take a tour", tour_path %>.</p>
+    <% if !logged_in? %>
+    <p>We're limiting new sign up while we work things out, but if you'd like an invite, you can <%= link_to "sign up", new_subscription_path %> and we'll let you know.</p>
     <% end %>
-  </div>
-</div>
+  </aside>
+  <%= render :partial => "tools/featured" %>
+  <%= render :partial => "usings/recent" %>
+</sidebar>
