--- a/app/views/sites/_tools.erb
+++ b/app/views/sites/_tools.erb
@@ -14,14 +14,14 @@
     </div>
 
     <% if !logged_in? || current_user.can_add_lines?(@site) %>
-      <%= render 'add_new_tools' %>
+      <%= render 'sites/add_new_tools' %>
     <% end %>
 
     <ul id="site-tools-list" class="sublist usings sites <%= sorting_class(params[:sort]) %>">
       <%= render :partial => 'usings/using_tool', :collection => tools %>
     </ul>
   <% else %>
-    <%= render 'add_new_tools' %>
+    <%= render 'sites/add_new_tools' %>
     <ul id="site-tools-list" class="sublist usings sites <%= sorting_class(params[:sort]) %>"></ul>
     <p class="main_message">We don't know of any tools used by <strong><%= @site.title %></strong>.</p>
   <% end %>
