Added a way to generate invites codes when a person sins up.

--- a/app/views/users/_sidebar.html.erb
+++ b/app/views/users/_sidebar.html.erb
@@ -5,6 +5,7 @@
       <li><%= link_to "Edit My Profile", edit_account_path %></li>
       <li><%= link_to "Change Email and Password", edit_user_registration_path %></li>
       <li><%= link_to "My Login Methods", authentications_path %></li>
+      <li><%= link_to "My Invites", invites_path %></li>
     </ul>
   </aside>
   
