Added ability to send invites. Lowered case on o in line Of thought.

--- a/app/views/bookmarks/new.erb
+++ b/app/views/bookmarks/new.erb
@@ -1,4 +1,4 @@
-<% title "Add an Bookmark to Line Of Thought" %>
+<% title "Add an Bookmark to Line of Thought" %>
 
 <section id="content" class="main">
   <h2><%= @title %></h2>
