--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,8 +1,8 @@
-<% title "About Line Of Thought" %>
+<% title "About Line of Thought" %>
 <section id="content" class="main">
   <article>
-    <h2>About Line Of Thought</h2>
-    <p>The idea for Line Of Thought goes back to 2004. I was developing in <%= link_to "ColdFusion", tool_path(:id => "coldfusion") %> at the time and kept running into people posting about how ColdFusion was "dead". Eventually this led to someone creating <a href="http://www.coldfusiondeveloper.com.au/go/top100/">Top 100 ColdFusion Websites</a> and <a href="http://gotcfm.com/">Got CFM</a> which scratched this itch in the CF community.</p>
+    <h2>About Line of Thought</h2>
+    <p>The idea for Line of Thought goes back to 2004. I was developing in <%= link_to "ColdFusion", tool_path(:id => "coldfusion") %> at the time and kept running into people posting about how ColdFusion was "dead". Eventually this led to someone creating <a href="http://www.coldfusiondeveloper.com.au/go/top100/">Top 100 ColdFusion Websites</a> and <a href="http://gotcfm.com/">Got CFM</a> which scratched this itch in the CF community.</p>
     <p>I moved over to the Ruby world shortly after, and they had their <a href="http://rails100.pbworks.com/w/page/8815411/Alexa-Rankings">own version</a>. I was wanting something like this that was cross community. I was also wanting something similar for every other tool I was using that provided much more information.</p>
     <p>Time and life got in the way, and the site was put aside for a while. Proud to say it's well on it's way and will be launching soon!</p>
   
