--- a/app/views/sites/new.erb
+++ b/app/views/sites/new.erb
@@ -1,4 +1,4 @@
-<% title "Add a Site to Line Of Thought" %>
+<% title "Add a Site to Line of Thought" %>
 
 <section id="content" class="main">
   <article>
