--- a/app/views/tour/bookmarks.html.erb
+++ b/app/views/tour/bookmarks.html.erb
@@ -1,7 +1,7 @@
 <% title "Take a Tour - Bookmarks" %>
 <section id="content" class="main">
   <h2><%= @title %></h2>
-  <p>The same way you can add a bookmark to a social news site, you can add a bookmark to Line Of Thought using our <a href="#">bookmarklet</a>.</p>
+  <p>The same way you can add a bookmark to a social news site, you can add a bookmark to Line of Thought using our <a href="#">bookmarklet</a>.</p>
   
   <p>You can tag any bookmark as being about a site, or about any tool. For instance, Digg recently wrote an <a href="http://about.digg.com/blog/how-digg-is-built">awesome post about How Digg is Built</a>. For this article, you could mark the article as being about Digg, then referencing a large number of tools (including PHP, Python, Tornado, Memcached and Redis).</p>
   
