--- a/app/views/tour/index.html.erb
+++ b/app/views/tour/index.html.erb
@@ -1,8 +1,8 @@
-<% title "Line Of Thought Tour" %>
+<% title "Line of Thought Tour" %>
 <section id="content" class="main">
   <article>
     <h2><%= @title %></h2>
-    <p>Line Of Thought is an open way for people to list out what technologies they use.</p>
+    <p>Line of Thought is an open way for people to list out what technologies they use.</p>
     <p>There's a few main goals of this site including:
     <ul>
       <li>Let <%= link_to "site developers", sites_tour_path %> list out what technologies power their sites.</li>
