--- a/app/views/tour/permissions.html.erb
+++ b/app/views/tour/permissions.html.erb
@@ -1,8 +1,8 @@
-<% title "Line Of Thought Tour - Permissions" %>
+<% title "Line of Thought Tour - Permissions" %>
 <section id="content" class="main">
   <article>
     <h2><%= @title %></h2>
-    <p>Line Of Thought is a very open system, making permissions a bit of a tough task. When you signup you have some basic permissions on what you can edit that will grow as you use the system more. In your <%= link_to "my account page", edit_user_registration_path %>, you can see what your current user level is, as well as what it'll take to get to the next level.</p>
+    <p>Line of Thought is a very open system, making permissions a bit of a tough task. When you signup you have some basic permissions on what you can edit that will grow as you use the system more. In your <%= link_to "my account page", edit_user_registration_path %>, you can see what your current user level is, as well as what it'll take to get to the next level.</p>
   
     <h3>Not logged</h3>
     <p>If you're not logged in you can browse the entire site. There's really no "private" data, so you can see the current copy of everything. You can't see revision history if you're not logged in, but that's about it.</p>
