--- a/app/views/tour/tools.html.erb
+++ b/app/views/tour/tools.html.erb
@@ -1,8 +1,8 @@
-<% title "Line Of Thought Tour - Tool Developers" %>
+<% title "Line of Thought Tour - Tool Developers" %>
 <section id="content" class="main">
   <article>
     <h2><%= @title %></h2>
-    <p>The number of amazing tools people create grows by leaps and bounds each day. Tools are created, but it's often difficult to find out who is using them. That's where Line Of Thought comes in.</p>
+    <p>The number of amazing tools people create grows by leaps and bounds each day. Tools are created, but it's often difficult to find out who is using them. That's where Line of Thought comes in.</p>
   
     <p>If your tool has a listing page of people using it (ex: <a href="http://www.mongodb.org/display/DOCS/Production+Deployments">MongoDB</a> or <a href="https://github.com/mojombo/jekyll/wiki/Sites">Jekyll</a>), it's easy for it to get out of hand. It's also just one tool out of many that those sites are using. You have the added bonus of being able to sort those sites by Google Pagerank, Alexa Rating and more.</p>
   
