--- a/app/stylesheets/layout.scss
+++ b/app/stylesheets/layout.scss
@@ -103,7 +103,9 @@ body.sessions nav ul li.sign-in a,
 body.registrations nav ul li.profile a,
 body.blog nav ul li.blog a,
 body.accounts nav ul li.profile a,
-body.invites nav ul li.profile a
+body.invites nav ul li.profile a,
+body.subscriptions nav ul li.sign-up a,
+body.registrations nav ul li.sign-up a
 { background-color:$accent-color; color:#eee; }
 
 .bookmarks { display:none; }
