--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -15,9 +15,9 @@
 
 <sidebar>
   <aside>
-    <h3>Welcome to Line Of Thought!</h3>
+    <h3>Welcome to Line of Thought!</h3>
     <p>We provide an easy way for developers to <em>share information</em> about what powers their websites.</p>
-    <p>If you'd like to know more about Line Of Thought, <%= link_to "take a tour", tour_path %>.</p>
+    <p>If you'd like to know more about Line of Thought, <%= link_to "take a tour", tour_path %>.</p>
     <% if !logged_in? %>
     <p>We're limiting new sign up while we work things out, but if you'd like an invite, you can <%= link_to "sign up", new_subscription_path %> and we'll let you know.</p>
     <% end %>
