--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
 <header class="group">
   <div class="container">
     <hgroup id="title">
-      <p><a href="<%= root_url %>">Line Of <span>Thought</span></a></p>
+      <p><a href="<%= root_url %>">Line of <span>Thought</span></a></p>
       <span>Tracking what powers the web</span>
     </hgroup>
     <div id="search" class="group">
@@ -65,16 +65,16 @@
 <footer>
   <div class="container">
     <section class="main-footer">
-      <h3>Copyright &copy; 2011 Line Of Thought.</h3>
+      <h3>Copyright &copy; 2011 Line of Thought.</h3>
       <!--
-      <p>Drag this bookmark to your bookmarks bar to lookup info on any website: <%= link_to "Line Of Thought", "javascript:(function(){f='#{lookup_url(:format => "popup")}?url='+encodeURIComponent(window.location.href)+'&title='+encodeURIComponent(document.title);a=function(){if(!window.open(f,'lineofthought-lookup','location=yes,links=no,scrollbars=yes,toolbar=no,width=700,height=650'))location.href=f};if(/Firefox/.test(navigator.userAgent)){setTimeout(a,0)}else{a()}})()" %></p>-->
+      <p>Drag this bookmark to your bookmarks bar to lookup info on any website: <%= link_to "Line of Thought", "javascript:(function(){f='#{lookup_url(:format => "popup")}?url='+encodeURIComponent(window.location.href)+'&title='+encodeURIComponent(document.title);a=function(){if(!window.open(f,'lineofthought-lookup','location=yes,links=no,scrollbars=yes,toolbar=no,width=700,height=650'))location.href=f};if(/Firefox/.test(navigator.userAgent)){setTimeout(a,0)}else{a()}})()" %></p>-->
       <p>Run into an issue? Have a suggestion? <a href="https://getsatisfaction.com/lineofthought">Let us know!</a></p>
     </section>
     <section class="sidebar">
       <h3>Quick Nav</h3>
       <ul>
         <li><a href="<%= tour_url %>">Take A Tour</a></li>
-        <li><a href="<%= about_url %>">About Line Of Thought</a></li>
+        <li><a href="<%= about_url %>">About Line of Thought</a></li>
         <li><a href="<%= lineofthought_url %>">Tools We Use</a></li>
         <li><a href="http://blog.lineofthought.com">Blog</a></li>
       </ul>
