--- a/app/views/sites/_show_sidebar.erb
+++ b/app/views/sites/_show_sidebar.erb
@@ -62,7 +62,7 @@
     <p><%= link_to "Add an Bookmark about #{@site.title}", new_bookmark_path %></p>
   </aside>
   <aside>
-    <h3>Contribute to Line Of Thought</h3>
+    <h3>Contribute to Line of Thought</h3>
     <ul class="lst">
       <li><%= link_to "Add any site", new_site_path %></li>
       <li><%= link_to "Add a new Tool", new_tool_path %></li>
