--- a/app/views/subscriptions/new.html.erb
+++ b/app/views/subscriptions/new.html.erb
@@ -1,4 +1,4 @@
-<% title "Get notified when Line Of Thought Opens" %>
+<% title "Get notified when Line of Thought Opens" %>
 <section id="content">
   <article>
     <h2><%= @title %></h2>
@@ -10,7 +10,7 @@
     <%= semantic_form_for @subscription do |form| %>
       <%= form.inputs do %>
         <%= form.input :email, :as => :string, :required => true %>
-        <%= form.input :url, :as => :string, :hint => "If you're wanting to add a site to Line Of Thought, you can add it here." %>
+        <%= form.input :url, :as => :string, :hint => "If you're wanting to add a site to Line of Thought, you can add it here." %>
         <%= form.commit_button :label => "Let me know!" %>
       <% end %>
     <% end %>
