--- a/app/views/tour/_sidebar.html.erb
+++ b/app/views/tour/_sidebar.html.erb
@@ -1,8 +1,8 @@
 <sidebar>
   <aside>
-    <h3>Line Of Thought Tour</h3>
+    <h3>Line of Thought Tour</h3>
     <ul class="lst">
-      <li><%= link_to "Line Of Thought Tour", tour_path %></li>
+      <li><%= link_to "Line of Thought Tour", tour_path %></li>
       <li><%= link_to "About Sites", sites_tour_path %></li>
       <li><%= link_to "About Tools", tools_tour_path %></li>
       <li><%= link_to "About Permissions", permissions_tour_path %></li>
