--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -288,7 +288,9 @@ body.sessions nav ul li.sign-in a,
 body.registrations nav ul li.profile a,
 body.blog nav ul li.blog a,
 body.accounts nav ul li.profile a,
-body.invites nav ul li.profile a {
+body.invites nav ul li.profile a,
+body.subscriptions nav ul li.sign-up a,
+body.registrations nav ul li.sign-up a {
   background-color: #68aff3;
   color: #eee; }
 
